# BrowserAgent

./: .gitignore  .gitmodules  ALIGNMENT_GUIDE.md  API_ENDPOINT_DIAGNOSTIC.md  API_README.md  CHROME_DEVTOOLS_FIX.md  GROK_TEST_APP.md  HTML_DETECTION_GUIDE.md  IMG_to_VIDEO.webui.yml  IMG_to_VIDEO_inputs.json  INTERACTIVE_SERVER_GUIDE.md  ISSUE_CHROME_REMOTE_ORIGINS.md  ISSUE_WebUI_Input_Specification.md  PATREON_USAGE.md  README.md  WORKFLOW_INTERPRETER_USAGE.md  align_html_detection.py  analyze_structure.py  compare_f11_tiles.py  detect_grok_tiles.py  detect_tiles_from_html.py  detect_widest_region.py  detect_with_background_toggle.py  fetch_page_source.py  grok_test_app.py  parse_listitems.py  patreon_collection_1611241.json  pyproject.toml  requirements-dev.txt  requirements.txt  scan_and_catalog_tiles.py  simple_catalog_click.py  test_aggressive_scroll.py  test_comfyui_modes.py  test_cred_parsing.py  test_extract_all_251893.py  test_extract_collection_251893.py  test_fetch_image_endpoint.py  test_grok_cases.py  test_grok_click.py  (+16 more)
.github/: copilot-instructions.md
docs/: BROWSER_SERVER_GUIDE.md  CLOUD_DEPLOYMENT_GUIDE.md  COMFYUI_QUICK_START.md  COMFYUI_REFACTOR_PROPOSAL.md  GROKBOT.md  HEADLESS_TEST_COVERAGE.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_COMMANDS.md  INTERACTIVE_GUIDE.md  INTERACTIVE_SERVER_GUIDE.md  LOGGING_TEST_COVERAGE.md  PATREON_CONTENT_EXTRACTION.md  PATREON_QUICK_EXTRACTION.md  PROPOSAL.md  TEST_COVERAGE.md  WEBUI_QUICK_START.md  WORKFLOW_CHANGE_ACTIONS.md  WORKFLOW_INTERPRETER.md  WORKFLOW_MODIFICATION_SUMMARY.md
scripts/: browser_client.py  (+12 more)
(+173 files in other folders)
